--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <meta name="theme-color" content="#F3EBDD" />
     <title>Coleta Eletrônica — Educação e Impacto</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
+    <!-- Preload da hero (melhora LCP) -->
+    <link rel="preload" as="image" href="images/hero-bg.webp" imagesrcset="images/hero-bg.webp" />
+
+    <!-- CSS único e enxuto -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Dicas de performance -->
+    <meta http-equiv="x-dns-prefetch-control" content="on" />
 </head>
 <body>
 
-<!-- NAVBAR (brand + hambúrguer) -->
 <header class="navbar">
     <div class="brand">♻️ Coleta LAGUNA</div>
     <nav class="nav">
@@ -22,90 +29,99 @@
     </nav>
 </header>
 
-<!-- HERO -->
-<section id="hero" class="hero">
-    <div class="hero-overlay"></div>
-    <div class="hero-inner reveal">
-        <h1 class="headline">
-            <span class="kinetic">Reciclagem de Lixo Eletrônico</span>
-            <span class="kinetic accent">Recicle hoje, garanta um amanhã melhor.</span>
-        </h1>
-        <p class="subtitle">Use pontos de coleta adequados e evite que metais pesados contaminem o ambiente.</p>
-        <button id="ctaSaibaMais" class="cta" aria-label="Quero fazer a diferença">
-            <span>Quero fazer a diferença</span>
-            <svg class="cta-arrow" viewBox="0 0 24 24" aria-hidden="true">
-                <path d="M12 4v14m0 0l-6-6m6 6l6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-        </button>
-    </div>
-</section>
+<main>
+    <!-- HERO -->
+    <section id="hero" class="hero">
+        <div class="hero-overlay"></div>
+        <div class="hero-inner reveal">
+            <h1 class="headline">
+                <span class="kinetic">Reciclagem de Lixo Eletrônico</span>
+                <span class="kinetic accent">Recicle hoje, garanta um amanhã melhor.</span>
+            </h1>
+            <p class="subtitle">Use pontos de coleta adequados e evite que metais pesados contaminem o ambiente.</p>
+            <button id="ctaSaibaMais" class="cta" aria-label="Quero fazer a diferença">
+                <span>Quero fazer a diferença</span>
+                <svg class="cta-arrow" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M12 4v14m0 0l-6-6m6 6l6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </button>
+        </div>
+    </section>
 
-<!-- EDUCAÇÃO -->
-<section id="educacao" class="section beige">
-    <div class="container">
+    <!-- EDUCAÇÃO -->
+    <section id="educacao" class="section beige">
+        <div class="container">
 
-        <article class="feature feature-left reveal">
-            <div class="feature-media">
-                <img src="images/poluicao.png" alt="Ícone redução de poluição">
-            </div>
-            <div class="feature-text">
-                <h2>Reduz Poluição</h2>
-                <p>
-                    O descarte incorreto de aparelhos libera substâncias como chumbo, cádmio e mercúrio,
-                    que podem infiltrar no solo e alcançar lençóis freáticos.
-                </p>
-            </div>
-        </article>
+            <article class="feature feature-left reveal">
+                <div class="feature-media">
+                    <img src="images/poluicao.png" alt="Ícone redução de poluição"
+                         loading="lazy" width="160" height="160" decoding="async" />
+                </div>
+                <div class="feature-text">
+                    <h2>Reduz Poluição</h2>
+                    <p>
+                        O descarte incorreto de aparelhos libera substâncias como chumbo, cádmio e mercúrio,
+                        que podem infiltrar no solo e alcançar lençóis freáticos. Ao levar seu e-lixo aos
+                        pontos de coleta, você interrompe esse ciclo de contaminação e evita danos à fauna,
+                        flora e à saúde humana.
+                    </p>
+                </div>
+            </article>
 
-        <article class="feature feature-right reveal">
-            <div class="feature-media">
-                <img src="images/recursos.png" alt="Ícone reaproveitamento de recursos">
-            </div>
-            <div class="feature-text">
-                <h2>Reaproveitamento de Recursos</h2>
-                <p>
-                    Placas, cabos e componentes contêm metais valiosos como cobre, prata, ouro e paládio.
-                    A reciclagem possibilita recuperar esses materiais, reduzindo a extração mineral.
-                </p>
-            </div>
-        </article>
+            <article class="feature feature-right reveal">
+                <div class="feature-media">
+                    <img src="images/recursos.png" alt="Ícone reaproveitamento de recursos"
+                         loading="lazy" width="160" height="160" decoding="async" />
+                </div>
+                <div class="feature-text">
+                    <h2>Reaproveitamento de Recursos</h2>
+                    <p>
+                        Placas, cabos e componentes contêm metais valiosos como cobre, prata, ouro e paládio.
+                        A reciclagem possibilita recuperar esses materiais, reduzindo a extração mineral e o
+                        impacto ambiental associado.
+                    </p>
+                </div>
+            </article>
 
-        <article class="feature feature-left reveal">
-            <div class="feature-media">
-                <img src="images/saude.png" alt="Ícone proteção à saúde">
-            </div>
-            <div class="feature-text">
-                <h2>Protege a Saúde</h2>
-                <p>
-                    A exposição a substâncias tóxicas do e-lixo está ligada a problemas respiratórios,
-                    neurológicos e dermatológicos. O descarte correto reduz riscos à população.
-                </p>
-            </div>
-        </article>
+            <article class="feature feature-left reveal">
+                <div class="feature-media">
+                    <img src="images/saude.png" alt="Ícone proteção à saúde"
+                         loading="lazy" width="160" height="160" decoding="async" />
+                </div>
+                <div class="feature-text">
+                    <h2>Protege a Saúde</h2>
+                    <p>
+                        A exposição a substâncias tóxicas do e-lixo está ligada a problemas respiratórios,
+                        neurológicos e dermatológicos. O descarte correto reduz riscos às comunidades e
+                        trabalhadores informais.
+                    </p>
+                </div>
+            </article>
 
-    </div>
-</section>
+        </div>
+    </section>
 
-<!-- CONTATO -->
-<section id="contato" class="section beige">
-    <div class="container contact">
-        <h2>Contato</h2>
-        <p>Fale com a gente pelo WhatsApp:</p>
-        <a class="whatsapp-badge" href="https://wa.me/5548996334659" target="_blank" rel="noopener" aria-label="Abrir WhatsApp">
-            <!-- Ícone WhatsApp em SVG inline -->
-            <svg viewBox="0 0 256 256" class="wa-svg" aria-hidden="true">
-                <defs>
-                    <linearGradient id="waGrad" x1="0" y1="0" x2="1" y2="1">
-                        <stop offset="0" stop-color="#25D366"/>
-                        <stop offset="1" stop-color="#22BF5B"/>
-                    </linearGradient>
-                </defs>
-                <circle cx="128" cy="128" r="110" fill="url(#waGrad)"/>
-                <path fill="#fff" d="M170.7 146.2c-1.7-.9-10-4.9-11.5-5.5-1.5-.6-2.6-.9-3.7.9-1.1 1.7-4.3 5.5-5.2 6.7-1 1.1-1.9 1.3-3.6.4-1.7-.9-7.1-2.6-13.5-8.2-5-4.5-8.4-10-9.4-11.6-.9-1.7-.1-2.6.8-3.5.8-.8 1.7-2.1 2.6-3.1.9-1 .9-1.7 1.3-2.8.4-1.1.2-2.1-.1-3-.4-.9-3.7-8.9-5.1-12.1-1.4-3.2-2.7-2.7-3.7-2.7-.9 0-2-.1-3.1-.1-1.1 0-3 .4-4.6 2.1-1.6 1.7-6 5.9-6 14.4 0 8.5 6.1 16.8 7 18 1 1.1 11.9 18.2 29 25 4.1 1.6 7.4 2.5 9.9 3.2 4.2 1.3 8.1 1.1 11.1.7 3.4-.5 10.4-4.3 11.9-8.5 1.5-4.2 1.5-7.8 1-8.5-.5-.7-1.6-1.1-3.3-2z"/>
-            </svg>
-        </a>
-    </div>
-</section>
+    <!-- CONTATO -->
+    <section id="contato" class="section beige">
+        <div class="container contact">
+            <h2>Contato</h2>
+            <p>Fale com a gente pelo WhatsApp:</p>
+            <a class="whatsapp-badge" href="https://wa.me/5548996334659" target="_blank" rel="noopener" aria-label="Abrir WhatsApp">
+                <!-- SVG inline (sem depender de arquivo externo) -->
+                <svg viewBox="0 0 256 256" class="wa-svg" aria-hidden="true" width="80" height="80">
+                    <defs>
+                        <linearGradient id="waGrad" x1="0" y1="0" x2="1" y2="1">
+                            <stop offset="0" stop-color="#25D366"/>
+                            <stop offset="1" stop-color="#22BF5B"/>
+                        </linearGradient>
+                    </defs>
+                    <circle cx="128" cy="128" r="110" fill="url(#waGrad)"/>
+                    <path fill="#fff" d="M170.7 146.2c-1.7-.9-10-4.9-11.5-5.5-1.5-.6-2.6-.9-3.7.9-1.1 1.7-4.3 5.5-5.2 6.7-1 1.1-1.9 1.3-3.6.4-1.7-.9-7.1-2.6-13.5-8.2-5-4.5-8.4-10-9.4-11.6-.9-1.7-.1-2.6.8-3.5.8-.8 1.7-2.1 2.6-3.1.9-1 .9-1.7 1.3-2.8.4-1.1.2-2.1-.1-3-.4-.9-3.7-8.9-5.1-12.1-1.4-3.2-2.7-2.7-3.7-2.7-.9 0-2-.1-3.1-.1-1.1 0-3 .4-4.6 2.1-1.6 1.7-6 5.9-6 14.4 0 8.5 6.1 16.8 7 18 1 1.1 11.9 18.2 29 25 4.1 1.6 7.4 2.5 9.9 3.2 4.2 1.3 8.1 1.1 11.1.7 3.4-.5 10.4-4.3 11.9-8.5 1.5-4.2 1.5-7.8 1-8.5-.5-.7-1.6-1.1-3.3-2z"/>
+                </svg>
+            </a>
+        </div>
+    </section>
+</main>
 
 <footer class="footer">
     <div class="container">
@@ -113,6 +129,7 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<!-- JS leve, carregado no final -->
+<script src="script.js" defer></script>
 </body>
 </html>
